--- a/css/lisn.css
+++ b/css/lisn.css
@@ -1,3 +1,11 @@
+
+#lisn {
+  background:#6967CE;
+  font-family:'solomon_normalregular';
+
+}
+
+
 .message {
   margin:8px 10px 8px 0px;
   padding:0 auto;
