--- a/css/lisn.css
+++ b/css/lisn.css
@@ -8,10 +8,10 @@
   margin:0px 37px 0px 37px;
 }
 #imgleft{
-  margin-top:132px; margin-left:-225px; position:absolute;z-index:1000; width:300px;overflow:hidden;
+  margin-top:0px; margin-left:-200px;position:absolute;z-index:10000; width:300px;overflow:hidden;
 }
 #imgright{
-  margin-top:132px; margin-left:310px; position:absolute;z-index:1000; max-width:225px;overflow:hidden;
+  margin-top:0px; left:310px; position:absolute;z-index:10000; max-width:225px;overflow:hidden;
 }
 #dots{
   top:30px; left:160px;
@@ -176,7 +176,9 @@ background-size:cover;
 width:360px;
 z-index:1000;
 }
-
+#img-contain {
+   position:absolute; width:375px; overflow:hidden; left:570px;  height:400px;  margin-top:132px;
+}
 #foot1{
   background:#4E4DA7;border-top:solid #8A88E3 1px; margin-top:10px;
 }
@@ -215,11 +217,14 @@ z-index:1000;
   #iphone img {
     margin:0px 30px 0px 18px;
   }
+  #img-contain {
+    left:0px;
+  }
 #imgleft {
-  margin-left:-235px;
+  margin-left:-200px;
 }
 #imgright {
-  margin-left:310px;
+  left:310px;
 }
 #dots{
   left:150px;
