--- a/css/lisn.css
+++ b/css/lisn.css
@@ -26,7 +26,7 @@ overflow-x: hidden;
   position:absolute;
    width:243px;
     text-align:center;
-     top:270px;
+     top:240px;
      margin:0 auto;
      font-family:'solomon_normalregular';
      font-weight:800;
@@ -35,119 +35,47 @@ overflow-x: hidden;
      z-index:1000000;
 }
 .artist {
-  position:absolute;width:243px;text-align:center; top:300px;color:white; margin:0 auto; font-family:'solomon_normalregular';font-weight:normal; margin:0 auto;padding:0 auto;font-size:12px;
+  position:absolute;width:243px;text-align:center; top:270px;color:white; margin:0 auto; font-family:'solomon_normalregular';font-weight:normal; margin:0 auto;padding:0 auto;font-size:12px;
 }
 #msgboard{
   width:247px;
-  margin-left:50px;
-  height:180px;
+  margin-left:55px;
+  height:230px;
   overflow:hidden;
+  margin-top:5px;
   border-top:solid 2px #6967CE;
   padding:0px 10px 0px 10px;
 }
 
 .message {
-  margin:8px 10px 8px 10px;
-  padding:0 auto;
+  margin:4px 6px 4px 6px;
+  padding:4px 4px 4px 4px;
   max-width:174px;
   height:auto;
-  background:transparent;
   z-index:10000;
-  float:right;
-  border:none;
   position:relative;
-  top:0px;
   font-family: 'solomon_normalregular';
-  font-size:18px;
+  font-size:12px;
   font-weight:500;
   display:block;
-}
-.message .test{
-  border-radius:3px;
-  max-width:174px;
-  width:auto;
-  height:auto;
-  background:#4E4DA7;
-  font-family: 'solomon_normalregular';
-  font-size:12px;
   color:white;
-
-  position:relative;
-  padding:8px 8.5px 8px 8.5px;
-  margin:0 auto;
-  overflow:hidden;
-  float:left;
-}
-.message .arrow1 {
-  border-right: 3px solid transparent;
-  border-bottom: 3px solid #6967CE;
-  position:relative;
-  margin:8px 9px 0 8.5px;
-  padding:0 auto;
-  width:0px;
-  height:0px;
-
-  float:left;
-}
-.message .arrow2 {
-  border-right: 3px solid transparent;
-  border-top: 3px solid #6967CE;
-  position:relative;
-  margin:0 auto;
-  padding:0 auto;
-  width:0px;
-  height:0px;
-  float:left;
-}
-.message .testl{
-  border-radius:2px;
-  width:174px;
-  height:auto;
-  background:transparent;
-  font-family:'solomon_normalregular';
-  font-size:12px;
-  color:white;
-  padding:8px 8.5px 8px 8.5px;
-  position:relative;
-  margin:0px 0px 0px 8.5px;
-  overflow:hidden;
-  float:right;
-  border:1px solid #4E4DA7;
-}
-.message .arrow1l {
-  border-top: 3px solid transparent;
-  border-right: 3px solid #fff;
-  position:relative;
-  margin:9px 0px 0px 0px;
-  padding:0 auto;
-  width:0px;
-  height:0px;
-  float:right;
-}
-.message .arrow2l {
-  border-left: 3px solid transparent;
-  border-top: 3px solid #fff;
-  position:relative;
-  margin:0px 0px 0px 12px;
-  padding:0 auto;
-  width:0px;
-  height:0px;
-  float:left;
+  border-radius:4px;
 }
 
 #msg1,#msg2,#msg4,#msg9,#msg10,#msg11{
-  float:left; background:transparent;
+float:left; background:transparent;  border:solid 1px rgba(0,0,0,0.4);
 }
 #msg3,#msg5,#msg6,#msg7,#msg8,#msg12,#msg13 {
-
+float:right; background:#000000; opacity:0.4; color:rgba(255,255,255,1);
 }
 
 
 .carouse{
-  width:240px; height:245px; overflow:hidden;
+  width:240px; height:200px; overflow:hidden;
   padding:0 auto;
   margin-left:60px;
   margin-top:72px;
+
   background: #6967CE; /* For browsers that do not support gradients */
     background: -webkit-linear-gradient(transparent,#6967CE); /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(transparent,#6967CE); /* For Opera 11.1 to 12.0 */
@@ -157,20 +85,25 @@ overflow-x: hidden;
 
 }
 .carouse-inner {
-  width:4200px; height:350px;  overflow:hidden;
+  width:4200px; height:200px;  overflow:hidden; margin-left:-180px;
 
 }
 
  .pic{
   margin-top:0px;
-  width:300px;
-  height:300px;
+  width:200px;
+  height:200px;
   padding:0 auto;
   display:block;
   float:left;
   background-size:cover;
   position:relative;
   z-index:-100000;
+}
+
+.pic img{
+  width:inherit;
+
 }
 
 .bg {
@@ -188,10 +121,10 @@ z-index:1000;
         margin-top:132px;
 }
 #foot1{
-  background:#4E4DA7;border-top:solid #8A88E3 1px; margin-top:10px;
+  background:#000000; opacity:0.4; border-top:solid #8A88E3 1px; margin-top:10px;
 }
 #beta {
-  color:white;  padding:39px 0px 48px 48px; overflow:hidden; font-family: 'solomon_normalregular'; font-size:24px;
+  color:white; opacity:1; padding:39px 0px 48px 48px; overflow:hidden; font-family: 'solomon_normalregular'; font-size:24px;
 }
 
 #beta-signup {
