--- a/css/lisn.css
+++ b/css/lisn.css
@@ -3,8 +3,8 @@
 #lisn {
   background:#6967CE;
   font-family:'solomon_normalregular';
-overflow-x: hidden;
-
+  overflow-x: hidden;
+  transition: background 0.3s ease;
 }
 #iphone img{
   margin:0px 37px 0px 37px;
@@ -40,16 +40,16 @@ overflow-x: hidden;
 #msgboard{
   width:247px;
   margin-left:55px;
-  height:230px;
+  height:210px;
   overflow:hidden;
-  margin-top:5px;
+  margin-top:20px;
   border-top:solid 2px #6967CE;
   padding:0px 10px 0px 10px;
 }
 
 .message {
-  margin:4px 6px 4px 6px;
-  padding:4px 4px 4px 4px;
+  margin:4px 6px;
+  padding:8px;
   max-width:174px;
   height:auto;
   z-index:10000;
@@ -59,16 +59,18 @@ overflow-x: hidden;
   font-weight:500;
   display:block;
   color:white;
-  border-radius:4px;
+  border-radius:2px;
+  transition: top 0.3s ease-in-out;
+  top:0;
 }
 
-#msg1,#msg2,#msg4,#msg9,#msg10,#msg11{
-float:left; background:transparent;  border:solid 1px rgba(0,0,0,0.4);
-}
-#msg3,#msg5,#msg6,#msg7,#msg8,#msg12,#msg13 {
-float:right; background:#000000; opacity:0.4; color:rgba(255,255,255,1);
+.received{
+  float:left; background:transparent;  border:solid 1px rgba(0,0,0,0.4);
 }
 
+.sent{
+  float:right; background:rgba(0, 0, 0, 0.4); color:rgba(255,255,255,1);
+}
 
 .carouse{
   width:240px; height:200px; overflow:hidden;
@@ -77,11 +79,12 @@ float:right; background:#000000; opacity:0.4; color:rgba(255,255,255,1);
   margin-top:72px;
 
   background: #6967CE; /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(transparent,#6967CE); /* For Safari 5.1 to 6.0 */
+  background: -webkit-linear-gradient(transparent,#6967CE); /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(transparent,#6967CE); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(transparent,#6967CE); /* For Firefox 3.6 to 15 */
   background: linear-gradient(transparent,#6967CE); /* Standard syntax (must be last) */
   z-index:100000;
+  transition: background 0.3s ease;
 
 }
 .carouse-inner {
@@ -121,16 +124,16 @@ z-index:1000;
         margin-top:132px;
 }
 #foot1{
-  background:#000000; opacity:0.4; border-top:solid #8A88E3 1px; margin-top:10px;
+  background:rgba(0, 0, 0, 0.4); border-top:solid #8A88E3 1px; margin-top:10px;
 }
 #beta {
-  color:white; opacity:1; padding:39px 0px 48px 48px; overflow:hidden; font-family: 'solomon_normalregular'; font-size:24px;
+  color:white; opacity:1; padding:39px 0px 48px 180px; overflow:hidden; font-family: 'solomon_normalregular'; font-size:24px;
 }
 
 #beta-signup {
   color:white;
   overflow:hidden;
-  padding:43px 55px 43px 0px;
+  padding:43px 150px 43px 0px;
   font-family: 'solomon_normalregular';
   font-size:24px;
 }
