removing the border at the bottom

--- a/css/lisn.css
+++ b/css/lisn.css
@@ -124,7 +124,7 @@ z-index:1000;
         margin-top:132px;
 }
 #foot1{
-  background:rgba(0, 0, 0, 0.4); border-top:solid #8A88E3 1px; margin-top:10px;
+  background:rgba(0, 0, 0, 0.4); margin-top:10px;
 }
 #beta {
   color:white; opacity:1; padding:39px 0px 48px 180px; overflow:hidden; font-family: 'solomon_normalregular'; font-size:24px;
