--- a/css/lisn.css
+++ b/css/lisn.css
@@ -1,5 +1,4 @@
 
-
 #lisn {
      background:#6967CE;
      font-family:'solomon_normalregular';
@@ -11,6 +10,7 @@
      font-family:solomon_sans_boldbold;
      font-weight:800;
      margin-bottom:-10px;
+
      color:white;
 }
 #Tagline {
@@ -218,11 +218,13 @@
     font-weight:800;
     margin-bottom:-10px;
     color:white;
+    margin-top:20px;
 }
 #Tagline {
     color:white;
     font-family:solomon_sans_lightregular;
     font-size:24px;
+    margin-top:10px;
 }
 
 .carouse{
