--- a/css/lisn.css
+++ b/css/lisn.css
@@ -18,102 +18,49 @@
      font-family:solomon_sans_lightregular;
      font-size:36px;
 }
-#iphone img{
-     margin:0px 37px 0px 37px;
+.bg {
+    position:absolute;
+    background-size:cover;
+    width:360px;
+    z-index:1000;
+    margin:0 auto;
+}
+
+#dots{
+  max-width:80px;
+  margin:30px auto;
+}
+#img-contain {
+    top:132px;
+    width:360px;
+    overflow:visible;
+    height:342px;
+    margin:auto;
+
 }
 #imgleft{
-     margin-top:0px;
-     margin-left:-112px;
+     margin-left:-130px;
      position:absolute;
-     z-index:10000;
-     width:300px;
+     width:185px;
+     height:342px;
      overflow:hidden;
+
+
 }
 #imgright{
      margin-top:0px;
-     left:310px;
+     left:300px;
+     width:170px;
      position:absolute;
-     z-index:10000;
-     max-width:225px;
+     height:342px;
      overflow:hidden;
-}
-#dots{
-     top:30px;
-     left:160px;
-}
-#mute{
-     top:0px;
-     left:287px;
-}
-.song {
-     position:absolute;
-     width:243px;
-     text-align:center;
-     top:240px;
-     margin:0 auto;
-     font-family:'solomon_normalregular';
-     font-weight:800;
-     font-size:24px;
-     color:white;
-     z-index:1000000;
-}
-.artist {
-     position:absolute;
-     width:243px;
-     text-align:center;
-     top:270px;
-     color:white;
-     margin:0 auto;
-     font-family:'solomon_normalregular';
-     font-weight:normal;
-     margin:0 auto;
-     padding:0 auto;
-     font-size:12px;
-}
-#msgboard{
-     width:247px;
-     margin-left:55px;
-     height:210px;
-     overflow:hidden;
-     margin-top:20px;
-     border-top:solid 2px #6967CE;
-     padding:0px 10px 0px 10px;
-}
 
-.message {
-     margin:4px 6px;
-     padding:8px;
-     max-width:174px;
-     height:auto;
-     z-index:10000;
-     position:relative;
-     font-family: 'solomon_normalregular';
-     font-size:12px;
-     font-weight:500;
-     display:block;
-     color:white;
-     border-radius:2px;
-     transition: top 0.3s ease-in-out;
-     top:0;
-}
-
-.received{
-     float:left;
-     background:transparent;
-     border:solid 1px rgba(0,0,0,0.4);
-}
-
-.sent{
-     float:right;
-     background:rgba(0, 0, 0, 0.4);
-     color:rgba(255,255,255,1);
 }
 
 .carouse{
       width:240px; height:200px; overflow:hidden;
       padding:0 auto;
-      margin-left:60px;
-      margin-top:72px;
+      margin:30px auto;
       background: #6967CE; /* For browsers that do not support gradients */
       background: -webkit-linear-gradient(transparent,#6967CE); /* For Safari 5.1 to 6.0 */
       background: -o-linear-gradient(transparent,#6967CE); /* For Opera 11.1 to 12.0 */
@@ -124,7 +71,7 @@
 
 }
 .carouse-inner {
-    width:4200px;
+    width:800px;
     height:200px;
     overflow:hidden;
     margin-left:-180px;
@@ -148,23 +95,92 @@
 
 }
 
-.bg {
-    position:absolute;
-    background-size:cover;
-    width:360px;
-    z-index:1000;
+.carouse .song {
+     position:absolute;
+     width:243px;
+     text-align:center;
+     top:250px;
+     font-family:'solomon_normalregular';
+     font-weight:600;
+     font-size:18px;
+     color:white;
+     z-index:100;
+     background:transparent;
+      transition: background 0.3s ease;
+
 }
-#img-contain {
-    position:absolute;
-    width:375px;
-    overflow:visible;
-    left:7px;
-    height:400px;
-    margin-top:132px;
+.carouse .artist {
+     position:absolute;
+     width:243px;
+     text-align:center;
+     top:280px;
+     color:white;
+     font-family:'solomon_normalregular';
+     font-weight:normal;
+     padding:0 auto;
+     font-size:12px;
+     z-index:1000;
+     background:transparent;
+       transition: background 0.3s ease;
 }
+#song1,#artist1{
+  display:block;
+}
+#song2,#artist2{
+  display:none;
+}
+#song3,#artist3{
+  display:none;
+}
+#song4,#artist4{
+  display:none;
+}
+
+
+#msgboard{
+     margin:auto;
+     width:240px;
+     height:200px;
+     overflow:hidden;
+     padding:0px 0px 0px 0px;
+}
+
+.message {
+     margin:4px 6px;
+     padding:8px;
+     max-width:174px;
+     height:auto;
+     position:relative;
+     font-family: 'solomon_normalregular';
+     font-size:12px;
+     font-weight:500;
+     display:block;
+     color:white;
+     border-radius:2px;
+     transition: top 0.3s ease-in-out;
+     top:0;
+}
+
+.received{
+     float:left;
+     background:transparent;
+     border:solid 1px rgba(0,0,0,0.4);
+}
+
+.sent{
+     float:right;
+     background:rgba(0, 0, 0, 0.4);
+     color:rgba(255,255,255,1);
+}
+
+
+
+
 #foot1{
+     position:absolute;
+     width:100%;
      background:rgba(0, 0, 0, 0.7);
-     margin-top:20px;
+     bottom:0px;
 }
 #beta {
      color:white;
@@ -210,7 +226,51 @@
     margin-right:4px;
     padding-top:10px;
 }
-@media  screen and (max-width:500px) {
+
+@media screen and (max-width:1200px){
+  .bg {
+    margin-left:48px;
+  }
+  #img-contain {
+    margin-left:48px;
+  }
+  #foot1 {
+    position:relative;
+    margin-top:43px;
+    width:auto;
+  }
+}
+
+@media screen and (max-width:992px){
+  #iphone {
+    margin-left:54px;
+  }
+  #img-contain {
+    margin-left:54px;
+  }
+  #foot1 {
+    position:relative;
+    margin-top:43px;
+    width:auto;
+  }
+}
+@media screen and (min-width:500px) and(max-width:768px){
+  #iphone {
+    margin-left:60px;
+  }
+  #img-contain {
+    margin-left:60px;
+  }
+
+  #foot1 {
+    position:relative;
+    margin-top:43px;
+    width:auto;
+  }
+}
+
+@media screen and (max-width:500px)
+{
 
 #lisnTitle{
     font-size:45px;
@@ -227,38 +287,29 @@
     margin-top:10px;
 }
 
-.carouse{
-    margin-left:54px;
-}
 
-#iphone img {
-    margin:0px 30px 0px 18px;
+#iphone{
+  margin-left:-60px;overflow:hidden;
 }
 
 #img-contain {
-    overflow:hidden;
+    margin-left:-70px;
+    width:411px;
+    overflow:visible;
     left:0px;
     right:0px;
 }
 
 #imgleft {
-    margin-left:-103px;
+    margin-left:-105px;
 }
 
 #imgright {
-    left:310px;
+    left:330px;
 }
 
-#dots{
-    left:150px;
-}
-
-#mute{
-    left:282px;
-}
-
-#foot1 {
-    margin-top:63px;float:right;
+#foot1{
+  position:relative; width:auto;
 }
 
 #beta{
@@ -279,4 +330,42 @@
     width:200px;
 }
 
+}
+
+@media screen and (max-width:320px) {
+#iphone {
+  margin-left:-90px;
+}
+#img-contain{
+  display:none;
+}
+.carouse {
+margin-left:-30px;
+}
+#msgboard {
+  margin-left:-30px;
+}
+#foot1{
+  margin-top:10px;
+}
+}
+@media screen and (width:375px) {
+#iphone {
+  margin-left:-70px;
+}
+#img-contain{
+  display:block;
+  margin-left:-80px;
+}
+
+
+.carouse {
+margin-left:-10px;
+}
+#msgboard {
+  margin-left:-10px;
+}
+#foot1{
+  margin-top:10px;
+}
 }
