--- a/css/lisn.css
+++ b/css/lisn.css
@@ -346,7 +346,7 @@ margin-left:-30px;
   margin-left:-30px;
 }
 #foot1{
-  margin-top:10px;
+  margin-top:43px;
 }
 }
 @media screen and (width:375px) {
@@ -366,6 +366,7 @@ margin-left:-10px;
   margin-left:-10px;
 }
 #foot1{
-  margin-top:10px;
+  margin-top:43px;
+  margin-bottom:0px;
 }
 }
