--- a/css/lisn.css
+++ b/css/lisn.css
@@ -74,7 +74,7 @@
     width:800px;
     height:200px;
     overflow:hidden;
-    margin-left:-180px;
+    margin-left:20px;
 
 }
 
@@ -173,9 +173,6 @@
      color:rgba(255,255,255,1);
 }
 
-
-
-
 #foot1{
      position:absolute;
      width:100%;
@@ -226,7 +223,13 @@
     margin-right:4px;
     padding-top:10px;
 }
-
+@media screen and (min-width:1200px){
+  #foot1 {
+    position:relative;
+    margin-top:83px;
+    width:auto;
+  }
+}
 @media screen and (max-width:1200px){
   .bg {
     margin-left:48px;
@@ -236,7 +239,7 @@
   }
   #foot1 {
     position:relative;
-    margin-top:43px;
+    margin-top:83px;
     width:auto;
   }
 }
@@ -250,7 +253,7 @@
   }
   #foot1 {
     position:relative;
-    margin-top:43px;
+    margin-top:83px;
     width:auto;
   }
 }
@@ -264,7 +267,7 @@
 
   #foot1 {
     position:relative;
-    margin-top:43px;
+    margin-top:83px;
     width:auto;
   }
 }
@@ -309,7 +312,7 @@
 }
 
 #foot1{
-  position:relative; width:auto;
+  position:relative; width:auto;   margin-top:83px;
 }
 
 #beta{
@@ -346,7 +349,7 @@ margin-left:-30px;
   margin-left:-30px;
 }
 #foot1{
-  margin-top:43px;
+  margin-top:83px;
 }
 }
 @media screen and (width:375px) {
@@ -366,7 +369,7 @@ margin-left:-10px;
   margin-left:-10px;
 }
 #foot1{
-  margin-top:43px;
+  margin-top:83px;
   margin-bottom:0px;
 }
 }
