--- a/css/lisn.css
+++ b/css/lisn.css
@@ -39,13 +39,17 @@
 
 }
 #imgleft{
-     margin-left:-130px;
+     margin-left:-114px;
      position:absolute;
      width:185px;
      height:342px;
      overflow:hidden;
 
 
+}
+
+#imgleft img{
+  transition:         all 600ms easing’s Bezier curve;
 }
 #imgright{
      margin-top:0px;
@@ -54,11 +58,10 @@
      position:absolute;
      height:342px;
      overflow:hidden;
-
 }
 
 .carouse{
-      width:240px; height:200px; overflow:hidden;
+      width:240px; height:208px; overflow:hidden;
       padding:0 auto;
       margin:30px auto;
       background: #6967CE; /* For browsers that do not support gradients */
@@ -100,9 +103,9 @@
      width:243px;
      text-align:center;
      top:250px;
-     font-family:'solomon_normalregular';
+     font-family:solomon_sans_boldbold;
      font-weight:600;
-     font-size:18px;
+     font-size:22px;
      color:white;
      z-index:100;
      background:transparent;
@@ -118,10 +121,12 @@
      font-family:'solomon_normalregular';
      font-weight:normal;
      padding:0 auto;
-     font-size:12px;
+     font-size:11px;
      z-index:1000;
+     opacity: 0.7;
      background:transparent;
-       transition: background 0.3s ease;
+    transition: background 0.3s ease;
+    margin-top:
 }
 #song1,#artist1{
   display:block;
@@ -163,8 +168,7 @@
 
 .received{
      float:left;
-     background:transparent;
-     border:solid 1px rgba(0,0,0,0.4);
+     background:rgba(0, 0, 0, 0.4);
 }
 
 .sent{
@@ -174,32 +178,39 @@
 }
 
 #foot1{
-     position:absolute;
-     width:100%;
+     position:relative;
+     width:auto;
+     margin-top:20px;
      background:rgba(0, 0, 0, 0.7);
-     bottom:0px;
+
 }
 #beta {
      color:white;
      opacity:1;
-     padding:39px 0px 48px 180px;
+
      overflow:hidden;
-     font-family: 'solomon_normalregular';
-     font-size:24px;
+     font-family: 'solomon_sans_lightregular';
+     font-size:20px;
+}
+#betaText{
+    float:right;
+  padding:39px;
 }
 
 #beta-signup {
     color:white;
     overflow:hidden;
-    padding:43px 150px 43px 0px;
+    padding:43px 0px 43px 0px;
     font-family: 'solomon_normalregular';
     font-size:24px;
 }
 #inpt {
-    float:right;
+    float:left;
     background:white;
     padding:0 auto;
+    margin-top:0px;
     border-radius:4px;
+    height:47px;
 }
 #email {
     font-size:12px;
@@ -210,12 +221,12 @@
     border:none;
     padding-left:16px;
     width:413px;
-    height:47px;
+    height:40px;
 }
 #signup {
     height:39px;
     width:100px;
-    font-weight:bold;
+    font-family: 'solomon_sans_boldbold';
     font-size:12px;
     border:none;
     background:#F5A623;
@@ -318,8 +329,9 @@
 
 #beta{
     padding:19px 0px 12px 35px;
-    font-family: 'solomon_normalregular';
+    font-family:'solomon_normalregular';
     font-size:16px;
+
 }
 
 #beta-signup {
